# advent_of_code

./: Cargo.toml
examples/: day1-1.rs  day1-2.rs  day2-1.rs  day2-2.rs  day2.rs  day3-1.rs  day3-2.rs  day4-1.rs
src/: day_1.rs  day_2.rs  day_3.rs  day_4.pest  day_4.rs
src/snapshots/: advent_of_code__day_3__tests__example_lookup_index.snap
tests/: day1.rs  day2.rs
