[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.1"
indexmap = "2.1.0"
itertools = "0.12.0"
log = "0.4.20"
ndarray = "0.15.6"
pest = "2.7.5"
pest_derive = "2.7.5"

[dev-dependencies]
insta = { version = "1.34.0" }
